attempts to fix failure to render header on iphones blog page

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,5 +10,5 @@
 @import "fontawesome";
 
 * {
-  text-rendering: optimizeLegibility;
+  // text-rendering: optimizeLegibility;
 }
